--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <div id="root"></div>
     <script src="./src/index.js"></script>
+  <script src="./src/index.css"></script>
   </body>
 </html>
